# srug-may-2025

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
nix/devenvs/: default.nix
slides/: slides.html  slides.org
